--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -366,7 +366,7 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Journal Articles}
 \noindent
-\years{2024}\textbf{Xambó, A.}, Roma, G. (2024). Human-Machine Agencies in Live Coding for Music Performance. \emph{Journal for New Music Research}.\\
+\years{2024}\textbf{Xambó, A.}, Roma, G. (2024). Human-Machine Agencies in Live Coding for Music Performance. \emph{Journal of New Music Research}.\\
 \years{2024}Jawad, K., \textbf{Xambó, A.} (2024). Feminist HCI and Narratives of Design Semantics in DIY Music Hardware. \emph{Frontiers in Communication}, 8:1345124.\\
 \years{2023}\textbf{Xambó, A.} (2023). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2): 276--289.\\
 {\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, 21.1. Online journal.\\
@@ -1184,7 +1184,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \noindent
 
 \years{2024b}\emph{Royal Society Open Science}. Royal Society.\\
-\years{2024a}\emph{Journal for New Music Research}. Taylor \& Francis.\\
+\years{2024a}\emph{Journal of New Music Research}. Taylor \& Francis.\\
 \years{2023b}\emph{Organised Sound}. Cambridge University Press (2023--2025).\\
 \years{2023a}\emph{Digital Creativity}. Routledge.\\
 \years{2022}\emph{Personal and Ubiquitous Computing}. Springer.\\
