--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -106,11 +106,11 @@ BA, MA, Social and Cultural Anthropology, Universitat de Barcelona, 1996.\\
 Senior Lecturer, QMUL, 2024--present. I have been senior lecturer, De Montfort University (DMU) (2020--2023); associate professor, Norwegian University of Science and Technology (NTNU) (2018--19) where I also was Music Communication \& Technology (MCT) master programme council leader and MCT programme study leader at NTNU; visiting lecturer and postdoc at Queen Mary University of London (2017--19); and postdoc at Georgia Tech (2015--17). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--19) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--17). From 2013--14, I was a research fellow at the London Knowledge Lab, University College London Institute of Education.
 I have been working for 10 years (2000--10) as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies (2000--10) as well as co-founder of my own interactive media studio (2004--10).\\
 
-{\textbf{Grants/Awards/Accolades}} from AHRC (2023--25); DMU Living in a Digital Society Spotlight (2022); DMU Future Research Leaders Programme (2021-22); HDI/EPSRC (2020--21); NTNU (2019, 2018--20); Sonic Arts Research Center (2018); NCWIT (2017); NSF AISL (2016); WiMIR (2016); OU (2010--13, 2010); Fund. Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
+{\textbf{Grants/Awards/Accolades}} from QMUL ERIC Fund (2025); UKRI AHRC (2023--25); DMU Living in a Digital Society Spotlight (2022); DMU Future Research Leaders Programme (2021-22); UKRI EPSRC/HDI Network (2020--21); NTNU Starting Grant (2018--20); Sonic Arts Research Center (2018); NCWIT (2017); NSF AISL (2016); WiMIR (2016); OU (2010--13, 2010); Fund. Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
 
-{\textbf{Peer-Reviewed Journal Publications}} in Digital Creativity (2023); Organised Sound (2023); MDPI (2021); Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
+{\textbf{Peer-Reviewed Journal Publications}} in Journal of New Music Research (2025); Organised Sound (2023); MDPI (2021); Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
-{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--22); Web Audio Conference (WAC) (2017--22); Audio Mostly (2010, 2017--18); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--18); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--12); and International Computer Music Conference (2011).\\
+{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--22); Web Audio Conference (WAC) (2017--22); Audio Mostly (2010, 2017--18); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--18); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019, 2025); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--12); and International Computer Music Conference (2011).\\
 
 {\textbf{Invited Keynote Talks}} at ADC (2023); WAC (2021); SMC (2020); Women in Sound Women on Sound (2016).\\
 
