--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -350,6 +350,7 @@ Total Euro Amount: \euro3,000
 \subsection*{Peer-Reviewed Books / Edited Books, Journal Special Issues, and Proceedings}
 \noindent
 
+\years{2025}Erdem, Ç., Griwodz, C., Serafin, S., \textbf{Xambó, A.} (eds.) Embodied Perspectives on Sound and Music AI (special issue). \emph{Frontiers in Computer Science}. Ongoing.\\
 \years{2023}\textbf{Xambó, A.}, Roma, G., Magnusson, T. (eds.) (2023). Live Coding Sonic Creativities (special issue). \emph{Organised Sound}, 28(2).\\
 \years{2020b}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2020). JAES Special Issue on Web Audio. \emph{Journal of Audio Engineering Society}, 68(10).\\
 \years{2020a}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2019). \emph{Proceedings of the International Web Audio Conference}. NTNU. ISSN: 2663-5844.\\
@@ -366,7 +367,7 @@ Total Euro Amount: \euro3,000
 
 \subsection*{Peer-Reviewed Journal Articles}
 \noindent
-\years{2024}\textbf{Xambó, A.}, Roma, G. (2024). Human-Machine Agencies in Live Coding for Music Performance. \emph{Journal of New Music Research}.\\
+\years{2024}\textbf{Xambó, A.}, Roma, G. (2024). Human-Machine Agencies in Live Coding for Music Performance. \emph{Journal of New Music Research}. 53(1--2), 33--46.\\
 \years{2024}Jawad, K., \textbf{Xambó, A.} (2024). Feminist HCI and Narratives of Design Semantics in DIY Music Hardware. \emph{Frontiers in Communication}, 8:1345124.\\
 \years{2023}\textbf{Xambó, A.} (2023). Discovering Creative Commons Sounds in Live Coding. \emph{Organised Sound}, 28(2): 276--289.\\
 {\years{2022}\textbf{Xambó, A.} (2022) ``Virtual Agents in Live Coding: A Review of past, present and future directions''. \emph{e-Contact!}, 21.1. Online journal.\\
@@ -385,6 +386,7 @@ Total Euro Amount: \euro3,000
 \noindent
 
 {\years{2025}\textbf{Xambó, A.}, Roma, G. (Accepted) ``Building a Dataset of Personal Live Coding Style Using MIRLCaProxy: A Journal of Creative Sonic Exploration under Constraints and Biases''. \emph{Proceedings of the International Conference of Live Coding (ICLC 2025)}. Barcelona, Spain.}\\
+{\years{2025}O’Flaherty, T. F., Marino, L., Saitis, C., \textbf{Xambó, A.} (Accepted) Sonicolour: Exploring Colour Control of Sound Synthesis with Interactive Machine Learning. Proceedings of the New Interfaces for Musical Expression.\\
 \years{2024} Zheng, S., Del Sette, B.M., Saitis, C., \textbf{Xambó, A.}, Bryan-Kinns, N. (2024) ``Building Sketch-to-Sound Mapping with Unsupervised Feature Extraction and Interactive Machine Learning''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '24)}. Utrecht, The Netherlands.\\
 {\years{2023}Champlin, A., Chicau, J., Corfiel, M., Knotts, S., Marie, M., Saladino, I., \textbf{Xambó, A.} (2023) ``LivecoderA Community Report'' (Community Report Paper). \emph{Proceedings of the International Conference of Live Coding (ICLC 2023)}. Utrecht, The Netherlands.}\\
 {\years{2022}\textbf{Xambó, A.}, Goudarzi, V. (2022) ``The Mobile Audience as a Digital Musical Persona in Telematic Performance''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
@@ -469,6 +471,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
+\years{2025c} \textsc{Keynote Speaker} (May 28, 2025). "Liveness as an open work: an ongoing live-coding algorithmic journey". \emph{International Conference on Live Coding 2025}. Universitat Oberta de Catalunya (UOC). Barcelona, Spain.\\ 
 \years{2025b} \textsc{Oral Presenter (online)} (March 13, 2025). "Live Coding a Chorale of Sounds Using MIRLCa: State of Affairs and Implications". \emph{SuperCollider Symposium 2025}. Johns Hopkins University. Washington D.C., USA.\\ 
 \years{2025a} \textsc{Invited Talk (online)} (February 28, 2025). "Intersecting Sonic Arts \& Computing: A Portfolio Journey". \emph{Music Engineering Forum}. University of Miami. Miami, FL, USA.\\ 
 \years{2024f} \textsc{Invited Talk (online)} together with Marino, L. (October 23, 2024). "Sensing the Forest: Lessons learned from our artistic-acoustic intervention at the Alice Holt Forest". \emph{Master in Acoustics and Musicology}. Aix-Marseille Université. Marseille, France.\\ 
@@ -574,6 +577,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Poster Presentations \& Demos}
 \noindent
 
+{\years{2025}\textsc{Poster Presenter} together with Roma, G. (May 29, 2025) ``Building a Dataset of Personal Live Coding Style Using MIRLCaProxy: A Journal of Creative Sonic Exploration under Constraints and Biases''. \emph{Proceedings of ICLC 2025}. Barcelona, Spain.}\\
 {\years{2021} \textsc{Poster Presenter (online)} (June 15, 2021). “Live Coding with the Cloud and a Virtual Agent". \emph{NIME '21}. 
 \emph{NYU Shanghai}, Shanghai, China.\\
 {\years{2020} \textsc{Poster Presenter (online)} (July 23, 2020). ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. \emph{NIME '20}. Birmingham, UK.}\\
@@ -686,7 +690,7 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Solo Performances}
 \noindent
 
-\years{2025}\textbf{Xambó, A.} (Accepted). ``Sensing the Alice Holt Forest''. \emph{International Conference of Live Coding (ICLC 2025)}. Barcelona, Spain.}\\ 
+\years{2025}\textbf{Xambó, A.} (May 29, 2025). ``Sensing the Alice Holt Forest''. \emph{International Conference of Live Coding (ICLC 2025)}. Barcelona, Spain.}\\ 
 \years{2023}\textbf{Xambó, A.} (November 30, 2023). ``(un)pack''. \emph{I2MT Inaugural Concert}, University of Nottingham, Nottingham, UK.\\ 
 \years{2023}\textbf{Xambó, A.} (June 14, 2023). ``Ceci n'est pas une usine''. \emph{+RAIN Film Fest}, Universitat Pompeu Fabra/Sonar+D, Barcelona, Spain.\\ 
 \years{2022e}\textbf{Xambó, A.} (November 27, 2022). A live coding session using MIRLCa at ``Performing Critical AI I: feedback, noise, corpus, code''. MusAI conference, Cafe OTO, London, UK.\\
@@ -1119,6 +1123,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Officer / Consultant}
 \noindent
 
+\years{2025}\textsc{Diversity consultant}. \emph{Web Audio Conference 2025}. Ircam/Mozilla, Paris, France.\\
 \years{2022}\textsc{Diversity consultant}. \emph{Web Audio Conference 2022}. Cannes, France.\\
 \years{2020}\textsc{Diversity consultant}. \emph{2nd Conference on AI Music Creativity (MuMe + CSMC)}. Graz, Austria.\\
 \years{2019--2022}\textsc{Women in NIME (WiNIME) Officer}. \emph{International Conference of New Interfaces for Musical Expression}.
@@ -1158,15 +1163,15 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 
 \years{2023c}\emph{Algorithmic Pattern Salon} (2023).\\ 
 \years{2023b}\emph{International Symposium on Computer Music Multidisciplinary Research} (2023).\\ 
-\years{2023a}\emph{International Conference on Live Coding (ICLC)} (2023).\\
+\years{2023a--2025a}\emph{International Conference on Live Coding (ICLC)} (2023, 2025).\\
 \years{2022}\emph{Music Heritage Knowledge Graphs (MHKG) (2022).}\\
 \years{2020b}\emph{Workshop on the Internet of Sounds} (2020).\\ 
 \years{2020a}\emph{Network Music Festival} (2020).\\
 \years{2019b}\emph{Workshop on Ubiquitous Music} (2020).\\
 \years{2019a--2021}\emph{Audio Mostly} (2019, 2021).\\
 \years{2018}\emph{ACM Special Interest Group on Computer GRAPHics and Interactive Techniques (SIGGRAPH)} (2018).\\
-\years{2018}\emph{International Conference of the Learning Sciences} (2018).\\
-\years{2018--2024}\emph{International Society for Music Information Retrieval Conference (ISMIR)} (2018--2023).\\
+\years{2018}\empty{International Conference of the Learning Sciences} (2018).\\
+\years{2018--2025}\emph{International Society for Music Information Retrieval Conference (ISMIR)} (2018--2025).\\
 \years{2017}\emph{ACM Creativity and Cognition} (2017).\\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
@@ -1183,6 +1188,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Journal Reviewer}
 \noindent
 
+\years{2025}\emph{International Journal of Performance Arts and Digital Media}. Taylor \& Francis.\\
 \years{2024b}\emph{Royal Society Open Science}. Royal Society.\\
 \years{2024a}\emph{Journal of New Music Research}. Taylor \& Francis.\\
 \years{2023b}\emph{Organised Sound}. Cambridge University Press (2023--2025).\\
@@ -1194,7 +1200,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{2018c}\emph{British Journal of Educational Technology}. Wiley.\\
 \years{2018b}\emph{Journal of New Music Research}. Taylor \& Francis.\\
 \years{2018a}\emph{Transactions on Computing Education}. ACM.\\
-\years{2017}\emph{Journal of Audio Engineering Society}. Audio Engineering Society (2017, 2022, 2023).\\
+\years{2017}\emph{Journal of Audio Engineering Society}. Audio Engineering Society (2017, 2022, 2023, 2025).\\
 \years{2016b}\emph{Interacting with Computers}. Oxford Journals.\\
 \years{2016a}\emph{Qualitative Research}. Sage Publications.\\
 \years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.
@@ -1215,6 +1221,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Hackathon Coach}
 \noindent
 
+\years{2025}(June 11--14 June, 2025) AI Performance Playground. Sónar+D, Barcelona, Spain.\\
 \years{2022}(January 29-30, 2022) On-the-Fly Live Coding Hacklab. European Union's "Creative Europe" program. Mentor of live coding and machine learning. ZKM, Karlsruhe, Germany.\\
 \years{2018}(July 4, 2018) Wallifornia MusicTech Hackathon. Liège, Belgium.\\
 
