--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -111,7 +111,7 @@ London, United Kingdom\\[.2cm]
 ---\emph{Senior Lecturer in Sound and Music Computing}, C4DM, QMUL, UK.\\
 ---\emph{Principal Investigator}, AHRC Sensing the Forest.\\
 ---\emph{Member}, EECS Women in Higher Education (WHEN), QMUL, UK.\\
----\emph{Associate Fellow}, Higher Education Academy, United Kingdom.
+---\emph{Fellow}, Higher Education Academy, United Kingdom.
 %%\hrule
 \section*{Areas of Interest}
 %Design of Digital Musical Instruments (DMIs) • Real-time Interactive Systems for Music Performance • Human-Computer Interaction • Interaction Design • Tangible, Physical \& Social Computing • Computer-Supported Collaborative, Participatory \& Improvisation Music • Live Coding • Real-time Music Information Retrieval and Machine Learning • Multichannel Spatialization • Generative \& Algorithmic Music • Immersive Sound Experiences • Women in Music Tech • Arts \& Social Sciences Research Methods • STEAM Education • Data Visualization • Creative Programming
@@ -385,8 +385,10 @@ Total Euro Amount: \euro3,000
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
-{\years{2025}\textbf{Xambó, A.}, Roma, G. (Accepted) ``Building a Dataset of Personal Live Coding Style Using MIRLCaProxy: A Journal of Creative Sonic Exploration under Constraints and Biases''. \emph{Proceedings of the International Conference of Live Coding (ICLC 2025)}. Barcelona, Spain.}\\
-{\years{2025}O’Flaherty, T. F., Marino, L., Saitis, C., \textbf{Xambó, A.} (Accepted) Sonicolour: Exploring Colour Control of Sound Synthesis with Interactive Machine Learning. Proceedings of the New Interfaces for Musical Expression.\\
+
+{\years{2025c}O’Flaherty, T. F., Elmokadem, M. B., Xu, X., Manjunatha, K. N., Roma, G., Xenakis, G., \textbf{Xambó, A.}, (accepted) ``Sonification Mappings for Sensing Tree Stress: A DIY Approach''. \emph{Proceedings of the Web Audio Conference 2025 (WAC 2025)}. Ircam/Mozilla, Paris, France.}\\
+{\years{2025b}\textbf{Xambó, A.}, Roma, G. (2025) ``Building a Dataset of Personal Live Coding Style Using MIRLCaProxy: A Journal of Creative Sonic Exploration under Constraints and Biases''. \emph{Proceedings of the International Conference of Live Coding (ICLC 2025)}. Barcelona, Spain.}\\
+{\years{2025a}O’Flaherty, T. F., Marino, L., Saitis, C., \textbf{Xambó, A.} (2025) Sonicolour: Exploring Colour Control of Sound Synthesis with Interactive Machine Learning. Proceedings of the New Interfaces for Musical Expression.\\
 \years{2024} Zheng, S., Del Sette, B.M., Saitis, C., \textbf{Xambó, A.}, Bryan-Kinns, N. (2024) ``Building Sketch-to-Sound Mapping with Unsupervised Feature Extraction and Interactive Machine Learning''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '24)}. Utrecht, The Netherlands.\\
 {\years{2023}Champlin, A., Chicau, J., Corfiel, M., Knotts, S., Marie, M., Saladino, I., \textbf{Xambó, A.} (2023) ``LivecoderA Community Report'' (Community Report Paper). \emph{Proceedings of the International Conference of Live Coding (ICLC 2023)}. Utrecht, The Netherlands.}\\
 {\years{2022}\textbf{Xambó, A.}, Goudarzi, V. (2022) ``The Mobile Audience as a Digital Musical Persona in Telematic Performance''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '22)}. Waipapa Taumata Rau, Aotearoa / The University of Auckland, New Zealand.}\\
@@ -439,6 +441,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Position \& Workshop Papers}
 \noindent
 
+\years{2025} \textbf{Xambó, A.}, Batchelor, P., Marino, L., Roma, G., Bell, M., Xenakis, G. (accepted) ``Soundscape-based music and creative AI: Insights and promises''. \emph{UK AI Research Symposium (UKAIRS ’25)}, 8-9 September 2025, Newcastle, UK.\\ 
 \years{2025} \textbf{Xambó, A.} (2025) ``Live Coding a Chorale of Sounds Using MIRLCa: State of Affairs and Implications''. \emph{SuperCollider Symposium 2025}. Johns Hopkins University. Washington D.C., USA.\\ 
 \years{2024b} Marino, L., \textbf{Xambó, A.} (2024) ``Developing DIY Solar-Powered, Off-Grid Audio Streamers for Forest Soundscapes: Progress and Challenges''. Proceedings of CHIME 2024. OU, Milton Keynes, UK.\\
 \years{2024a} Zheng, S., \textbf{Xambó, A.}, Bryan-Kinns, N. (2024) ``A Mapping Strategy for Interacting with Latent Audio Synthesis Using Artistic Materials''. 2nd International Workshop on eXplainable AI for the Arts (XAIxArts). ACM Creativity and Cognition Conference. Chicago, IL, US.\\
@@ -462,7 +465,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \noindent
 
 \years{2022}(July 20, 2022). Book Endorsement of \emph{``The Body in Sound, Music and Performance Studies in Audio and Sonic Arts.'' Edited By Linda O Keeffe, Isabel Nogueira. Focal Press / Routledge.}''\\
-\years{2021}(December 22, 2021). ``Book Review: \emph{Thor Magnusson, Sonic Writing: Technologies of Material, Symbolic, and Signal Inscriptions. New York: Bloomsbury Academic, 2019. ISBN: 9781501313851. DOI: https://doi.org/10.5040/9781501313899}''. \emph{Organised Sound}, 26:3, pp. 430–433.
+\years{2021}(December 22, 2021). ``Book Review: \emph{Thor Magnusson, Sonic Writing: Technologies of Material, Symbolic, and Signal Inscriptions. New York: Bloomsbury Academic, 2019. ISBN: 9781501313851. DOI: https://doi.org/10.5040/9781501313899}''. \emph{Organised Sound}, 26:3, pp. 430–433. \\[1.2cm]%hack
+
 
 
 \section*{Talks, Panels \& Oral Presentations}
@@ -690,7 +694,8 @@ Practices of Music; New Technologies, Instruments and Agents}. Oodi, Helsinki, F
 \subsection*{Solo Performances}
 \noindent
 
-\years{2025}\textbf{Xambó, A.} (May 29, 2025). ``Sensing the Alice Holt Forest''. \emph{International Conference of Live Coding (ICLC 2025)}. Barcelona, Spain.}\\ 
+\years{2025b}\textbf{Xambó, A.} (November, 2025). ``Sensing the Alice Holt Forest''. \emph{Web Audio Conference 2025 (WAC 2025)}. Ircam/Mozilla, Paris, France.}\\ 
+\years{2025a}\textbf{Xambó, A.} (May 29, 2025). ``Sensing the Alice Holt Forest''. \emph{International Conference of Live Coding (ICLC 2025)}. Barcelona, Spain.}\\ 
 \years{2023}\textbf{Xambó, A.} (November 30, 2023). ``(un)pack''. \emph{I2MT Inaugural Concert}, University of Nottingham, Nottingham, UK.\\ 
 \years{2023}\textbf{Xambó, A.} (June 14, 2023). ``Ceci n'est pas une usine''. \emph{+RAIN Film Fest}, Universitat Pompeu Fabra/Sonar+D, Barcelona, Spain.\\ 
 \years{2022e}\textbf{Xambó, A.} (November 27, 2022). A live coding session using MIRLCa at ``Performing Critical AI I: feedback, noise, corpus, code''. MusAI conference, Cafe OTO, London, UK.\\
@@ -811,7 +816,8 @@ Role: Concept, implementation and tangible user interface design.
 \years{1999}Xambó, A. \emph{Mitösöma} (10 min). Spain. Video creation | Animation film.\\
 \years{1998c}Xambó, A. \emph{Lufthansa} (3 min). Spain. Videoclip for La Más Fina.\\
 \years{1998b}Xambó, A. \emph{Neila} (2 min). Spain. Video creation.\\
-\years{1998a}Xambó, A. \emph{Sueños} (1 min). Spain. Video creation | Animation film.
+\years{1998a}Xambó, A. \emph{Sueños} (1 min). Spain. Video creation | Animation film. \\[1.2cm]%hack
+
 
 \subsection*{Installations \& Visuals}
 \noindent
@@ -1116,7 +1122,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Fellow}
 \noindent
 
-\years{2019--present}\emph{Associate Fellow of the Higher Education Academy}, United Kingdom.\\
+\years{2025--present}\emph{Fellow of the Higher Education Academy}, United Kingdom.\\
+\years{2019--2025}\emph{Associate Fellow of the Higher Education Academy}, United Kingdom.\\
 \years{08/2018--01/2019}\emph{Visiting Lecturer}, C4DM, EECS, QMUL.
 
 
@@ -1131,7 +1138,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 
 \subsection*{Conference Academic Chair / Meta-Reviewer / Local Chair}
 \noindent
-\years{2025c}\textsc{Conference Paper Co-Chair}. \emph{Web Audio Conference 2025}. Paris, France.\\ 
+\years{2025c}\textsc{Conference Paper Co-Chair}. \emph{Web Audio Conference 2025}. Ircam/Mozilla, Paris, France.\\ 
 \years{2025b}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2025). The Australian National University, Ngunnawal and Ngambri Country (Canberra), Australia.\\
 \years{2025a}\textsc{Conference Papers Committee Member}. \emph{International Conference on Live Coding} (2025). Barcelona, Spain.\\
 \years{2024}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2024). Utrecht, Netherlands.\\
@@ -1161,8 +1168,10 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \subsection*{Conference Programme Committee Member (Reviewer)}
 \noindent
 
+\years{2025b}\emph{UK AI Research Symposium 2025 (UKAIRS)} (2025).\\ 
+\years{2025a}\emph{2025 AES International Conference on Artificial Intelligence and Machine Learning for Audio (AES AIMLA)} (2025).\\ 
 \years{2023c}\emph{Algorithmic Pattern Salon} (2023).\\ 
-\years{2023b}\emph{International Symposium on Computer Music Multidisciplinary Research} (2023).\\ 
+\years{2023b}\emph{International Symposium on Computer Music Multidisciplinary Research} (2023, 2025).\\ 
 \years{2023a--2025a}\emph{International Conference on Live Coding (ICLC)} (2023, 2025).\\
 \years{2022}\emph{Music Heritage Knowledge Graphs (MHKG) (2022).}\\
 \years{2020b}\emph{Workshop on the Internet of Sounds} (2020).\\ 
@@ -1178,7 +1187,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.%
 \years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017, 2018).\\
 \years{2016, 2020}\emph{International Conference on Live Interfaces (ICLI)} (2016, 2020).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
-\years{2016--2022}\emph{Web Audio Conference (WAC)} (2016--2022).\\
+\years{2016--2025}\emph{Web Audio Conference (WAC)} (2016--2025).\\
 \years{2015--2020}\emph{ACM Special Interest Group on Computer-Human Interaction (CHI)} (2015--2021).\\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
