--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -110,15 +110,15 @@ I have been working for 10 years (2000--10) as interaction designer, web designe
 
 {\textbf{Peer-Reviewed Journal Publications}} in Journal of New Music Research (2025); Organised Sound (2023); MDPI (2021); Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
-{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--22); Web Audio Conference (WAC) (2017--22); Audio Mostly (2010, 2017--18); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--18); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019, 2025); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--12); and International Computer Music Conference (2011).\\
+{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--22, 2024--25); Web Audio Conference (WAC) (2017--22, 2025); Audio Mostly (2010, 2017--18); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--18); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019, 2025); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--12); and International Computer Music Conference (2011).\\
 
-{\textbf{Invited Keynote Talks}} at ADC (2023); WAC (2021); SMC (2020); Women in Sound Women on Sound (2016).\\
+{\textbf{Invited Keynote Talks}} at ICLC (2025); ADC (2023); WAC (2021); SMC (2020); Women in Sound Women on Sound (2016).\\
 
-{\textbf{Performances}} at +RAIN (2023); Cafe OTO (2022); British Science Festival (2022); BEAST (2022); EarTaxi (2021); Jefferson Park EXP (2021); Network Music Festival (2020); Eulerroom Equinox (2020); PACE/DMU (2020--21); ICLC (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--22); Cube Fest (2018); NIME (2017--18, 2021--22); TEI  (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
+{\textbf{Performances}} at +RAIN (2023); Cafe OTO (2022); British Science Festival (2022); BEAST (2022); EarTaxi (2021); Jefferson Park EXP (2021); Network Music Festival (2020); Eulerroom Equinox (2020); PACE/DMU (2020--21); ICLC (2019, 2025); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--22, 2025); Cube Fest (2018); NIME (2017--18, 2021--22); TEI  (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
-{\textbf{Conference Organizer}} for WAC (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); NIME (2019, paper co-chair, session chair); ICLI (2020, conference local committee member); Computational Creativity (2017, local committee member).\\
+{\textbf{Conference Organizer}} for WAC (2025, papers co-chair; 2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); NIME (2026, papers co-chair; 2019, papers co-chair, session chair); ICLI (2020, conference local committee member); Computational Creativity (2017, local committee member).\\
 
-{\textbf{Interviews/Press Coverage}} in PSF (2023); The Wire (2022); OnCurating.org (2020); Ballade.no (2019); Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
+{\textbf{Interviews/Press Coverage}} in DAZED (2025); PSF (2023); The Wire (2022); OnCurating.org (2020); Ballade.no (2019); GirlsGeekDinnerTrondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
 
 {\textbf{Research Visits}} at Filmuniversität Babelsberg KONRAD WOLF (2018--2019); University of Strathclyde (2011--12); UPF (2011); and OU (2010).\\
 
